[package]
name = "twitter-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
clap = { version = "3.1.6", features = ["derive"] }
egg-mode = "0.16.0"
maplit = "1.0.2"
reqwest = { version = "0.11" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
