[package]
name = "twitter-dl"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
chrono = "0.4.19"
clap = { version = "3.1.6", features = ["derive"] }
egg-mode = "0.16.0"
futures = "0.3.21"
maplit = "1.0.2"
reqwest = { version = "0.11" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tempfile = "3.3.0"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
